Session Wednesday 12th August 2020

--- a/01 inbox/20200809_2117.md
+++ b/01 inbox/20200809_2117.md
@@ -1,6 +1,6 @@
 # Stopping HTML page elements from being tabbable
 * Tags
-	* web-design, accessibility, keyboard, tabbing, front-end
+	* #web-design, #accessibility, #keyboard, #tabbing, #front-end
 * Reference
 	* [URL](https://www.sarasoueidan.com/blog/keyboard-friendlier-article-listings/)
 
